Fixed header styles for overlapping franchise opportunities and footer to be more even

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -7839,10 +7839,9 @@ iframe[name="google_conversion_frame"] {
   .site-header .logo {
     position: absolute;
     left: 2%;
-    top: 45%;
+    top: 25%;
     z-index: 99;
-    transition: all 0.6s ease-in-out;
-    transform: scale(1.1); }
+    transition: all 0.6s ease-in-out; }
     @media screen and (max-width: 1500px) {
       .site-header .logo {
         transform: scale(0.9);
@@ -7884,12 +7883,18 @@ iframe[name="google_conversion_frame"] {
       padding: 10px; }
       @media screen and (max-width: 1400px) {
         .site-header .franchise a {
-          padding: 5px; } }
+          padding: 0; } }
+      @media screen and (max-width: 1175px) {
+        .site-header .franchise a {
+          padding: 10px; } }
       .site-header .franchise a p {
-        font-size: 20px;
+        font-size: 18px;
         padding-top: 10px;
         line-height: 1;
         margin-bottom: 0; }
+        @media screen and (max-width: 1400px) {
+          .site-header .franchise a p {
+            padding-top: 0; } }
         @media screen and (max-width: 1200px) {
           .site-header .franchise a p {
             font-size: 16px; } }
@@ -7926,7 +7931,7 @@ iframe[name="google_conversion_frame"] {
     display: flex;
     align-items: center;
     justify-content: flex-end; }
-    @media screen and (max-width: 1500px) {
+    @media screen and (max-width: 1530px) {
       .site-header .flex {
         justify-content: center; } }
     @media screen and (max-width: 1000px) {
@@ -8994,9 +8999,8 @@ iframe[name="google_conversion_frame"] {
       .site-footer .flex {
         flex-wrap: wrap; } }
     .site-footer .flex .links {
-      flex: 1 1 38%;
-      margin: 0 85px 0 15px;
-      margin-top: 15px; }
+      flex: 1 1 33%;
+      margin: 0 10px; }
       @media screen and (max-width: 768px) {
         .site-footer .flex .links {
           flex: 1 1 100%; } }
@@ -9006,6 +9010,9 @@ iframe[name="google_conversion_frame"] {
         flex-direction: column;
         height: 100%;
         justify-content: space-around; }
+        @media screen and (max-width: 600px) {
+          .site-footer .flex .links ul {
+            padding-left: 0; } }
         .site-footer .flex .links ul a {
           color: #D8D3C4;
           transition: all 0.3s ease-in-out; }
@@ -9016,8 +9023,8 @@ iframe[name="google_conversion_frame"] {
             border-bottom: solid 1px rgba(255, 255, 255, 0.4);
             font-size: 22px; }
     .site-footer .flex .contact, .site-footer .flex .map {
-      flex: 1 1 28%;
-      margin: 0 15px; }
+      flex: 1 1 33%;
+      margin: 0 10px; }
       @media screen and (max-width: 768px) {
         .site-footer .flex .contact, .site-footer .flex .map {
           flex: 1 1 100%;
