--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -15,9 +15,8 @@
 			flex-wrap:wrap;
 		}
 		.links {
-			flex:1 1 38%;
-			margin:0 85px 0 15px;
-			margin-top:15px;
+			flex:1 1 33%;
+			margin:0 10px;
 			@include max-width($screen-sm) {
 				flex:1 1 100%;
 			}
@@ -27,6 +26,9 @@
 				flex-direction:column;
 				height:100%;
 				justify-content:space-around;
+				@include max-width(600px) {
+					padding-left:0;
+				}
 				a {
 					color:$brand-success;
 					transition:all 0.3s ease-in-out;
@@ -42,8 +44,8 @@
 			}
 		}
 		.contact, .map {
-			flex:1 1 28%;
-			margin:0 15px;
+			flex:1 1 33%;
+			margin:0 10px;
 			@include max-width($screen-sm) {
 				flex:1 1 100%;
 				margin:20px auto;
